@@ -118,15 +118,17 @@ $options
 	->section("Header")
 		->open_outersection()
 			->section_order("header_section_order", "Drag & Drop Header Elements", array('options' => array("ifeature_header_content" => "Logo + Icons", "ifeature_sitename_contact" => "Logo + Contact", "ifeature_description_icons" => "Description + Icons", "ifeature_logo_menu" => "Logo + Menu", "ifeature_logo_Description" => "Logo + Description", "ifeature_banner" => "Banner", "ifeature_icons" => "Icons", "ifeature_custom_header_element" => "Custom", "synapse_navigation" => "iMenu", "ifeature_sitename_register" => "Logo + Login"), 'default' => 'ifeature_header_content,synapse_navigation'))
-			->upload($themeslug."_banner", "Banner Image")
 			->textarea($themeslug."_header_contact", "Contact Information")
 			->textarea($themeslug."_custom_header_element", "Custom HTML")
 		->close_outersection()
+			->subsection("Banner Options")
+				->upload($themeslug."_banner", "Banner Image")
+				->text($themeslug."_banner_url", "Banner URL", array('default' => home_url()))
+			->subsection_end()
 			->subsection("Header Options")
 			->upload($themeslug."_logo", "Custom Logo")
 						->text($themeslug."_icon_margin", "Social Icon Margin Top", array('default' => '10px'))
 			->upload($themeslug."_favicon", "Custom Favicon")
-			->checkbox($themeslug."_disable_breadcrumbs", "Breadcrumbs", array('default' => true))
 		->subsection_end()
 		->subsection("iMenu Options")
 			->select($themeslug."_menu_font", "Custom Menu Font", array( 'options' => array("Arial" => "Arial (default)", "Courier New" => "Courier New", "Georgia" => "Georgia", "Helvetica" => "Helvetica", "Lucida Grande" => "Lucida Grande", "Tahoma" => "Tahoma", "Times New Roman" => "Times New Roman", "Verdana" => "Verdana", "Actor" => "Actor", "Coda" => "Coda", "Maven+Pro" => "Maven Pro", "Metrophobic" => "Metrophobic", "News+Cycle" => "News Cycle", "Nobile" => "Nobile", "Tenor+Sans" => "Tenor Sans", "Quicksand" => "Quicksand", "Ubuntu" => "Ubuntu", 'custom' => "Custom")))
