@@ -252,6 +252,7 @@ function ifeature_sitename_contact_content() {
 function ifeature_banner_content() {
 global $themeslug, $options, $root; //Call global variables
 $banner = $options->get($themeslug.'_banner'); //Calls the logo URL from the theme options
+$url = $options->get($themeslug.'_banner_url');
 $default = "$root/images/pro/banner.jpg";
 
 ?>
@@ -262,11 +263,11 @@ $default = "$root/images/pro/banner.jpg";
 			<div id="banner">
 			
 			<?php if ($banner != ""):?>
-				<a href="<?php echo home_url(); ?>/"><img src="<?php echo stripslashes($banner['url']); ?>" alt="logo"></a>		
+				<a href="<?php echo $url; ?>/"><img src="<?php echo stripslashes($banner['url']); ?>" alt="logo"></a>		
 			<?php endif; ?>
 			
 			<?php if ($banner == ""):?>
-				<a href="<?php echo home_url(); ?>/"><img src="<?php echo $default; ?>" alt="logo"></a>		
+				<a href="<?php echo $url; ?>/"><img src="<?php echo $default; ?>" alt="logo"></a>		
 			<?php endif; ?>
 			
 			</div>		
